--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full Stack Full CRUD To-Do App</title>
+    <link rel="stylesheet" href="/vendors/bootstrap.css">
     <link rel="stylesheet" href="/styles/style.css">
     <script src="/vendors/jquery-3.5.1.min.js"></script>
     <script src="/scripts/client.js"></script>
 </head>
 <body>
     <h1>To-Do List</h1>
-    <div id="inputDiv">
-        <input id="taskIn" type="text" placeholder="Task"><br><br>
-        <input id="notesIn" type="text" placeholder="Note"><br><br>
-        <button id="submitTask">Submit</button><br><br>
+    <div id="inputDiv" class="input-group mb-3">
+        <input id="taskIn" type="text" placeholder="Task" class="form-control" aria-label="Default"><br><br>
+        <input id="notesIn" type="text" placeholder="Note" class="form-control" aria-label="Default"><br><br>
+        <button id="submitTask" class="btn btn-secondary btn-lg btn-block">Submit</button><br><br>
     </div>
     <div id="outputDiv">
-        <ul id="taskListOut">
+        <ul class="list-group " id="taskListOut">
         </ul>
     </div>
 
