--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/vendors/bootstrap.css">
     <link rel="stylesheet" href="/styles/style.css">
     <script src="/vendors/jquery-3.5.1.min.js"></script>
+    <script src="/vendors/moment.js"></script>
     <script src="/scripts/client.js"></script>
 </head>
 <body>
